--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:esp32-s3-devkitm-1]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32-s3-devkitm-1
 framework = arduino
-monitor_speed=115200
+monitor_speed = 115200
+lib_deps = 
+	espressif/esp32-camera@^2.0.4
+	bblanchon/ArduinoJson@^7.0.3
